force-app/main/default/objects/Item__c/fields/RevenueClassification__c.field-meta.xml
<CustomField>
    <fullName>RevenueClassification__c</fullName>
    <description>When ItemType = Item, controls revenue reporting and some aspects of price calculation, as well as where the item appears on a BEO. When ItemType = Simple Menu, indicates where the item should appear on the BEO. Not used when ItemType = Detailed Menu or Text.</description>
    <inlineHelpText>When ItemType = Item, controls revenue reporting and some aspects of price calculation, as well as where the item appears on a BEO. When ItemType = Simple Menu, indicates where the item should appear on the BEO. Not used when ItemType = Detailed Menu or Text.</inlineHelpText>
    <label>Revenue Classification</label>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>RevenueClassification__c</referenceTo>
    <relationshipLabel>Items</relationshipLabel>
    <relationshipName>RevenueClassification</relationshipName>
    <type>Lookup</type>
</CustomField>