force-app/main/default/objects/Item__c/fields/RichDescription__c.field-meta.xml
<CustomField>
    <fullName>RichDescription__c</fullName>
    <description>HTML description of the item.</description>
    <inlineHelpText>HTML description of the item.</inlineHelpText>
    <label>Rich Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>