force-app/main/default/objects/Item__c/fields/Service_Factor__c.field-meta.xml
<CustomField>
    <fullName>Service_Factor__c</fullName>
    <description>Factor for calculating serving quantity. Examples: If one item serves 4 people, then ServiceFactor = 4. If each person requires 2 items, ServiceFactor = .5.</description>
    <inlineHelpText>Factor for calculating serving quantity. Examples: If one item serves 4 people, then ServiceFactor = 4. If each person requires 2 items, ServiceFactor = .5.</inlineHelpText>
    <label>Service Factor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>