force-app/main/default/objects/Item__c/fields/ServingUnit__c.field-meta.xml
<CustomField>
    <fullName>ServingUnit__c</fullName>
    <description>Serving unit of measure.</description>
    <inlineHelpText>Serving unit of measure.</inlineHelpText>
    <label>Serving Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>