force-app/main/default/objects/Item__c/fields/SoldByUnit__c.field-meta.xml
<CustomField>
    <fullName>SoldByUnit__c</fullName>
    <description>Unit of measure in which unit prices are expressed.</description>
    <inlineHelpText>Unit of measure in which unit prices are expressed.</inlineHelpText>
    <label>Sold By Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>