force-app/main/default/objects/Item__c/fields/SourceSystemExternalId__c.field-meta.xml
<CustomField>
    <fullName>SourceSystemExternalId__c</fullName>
    <description>The External ID of the source system for this record. Required when ExternalId is not null. Must be the ExternalId of a previously defined System.</description>
    <inlineHelpText>The External ID of the source system for this record. Required when ExternalId is not null. Must be the ExternalId of a previously defined System.</inlineHelpText>
    <label>Source System External Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>