force-app/main/default/objects/Item__c/fields/TrackInventory__c.field-meta.xml
<CustomField>
    <fullName>TrackInventory__c</fullName>
    <description>If true then the Inventory field is used to indicate the total number of items available at any one time.</description>
    <inlineHelpText>If true then the Inventory field is used to indicate the total number of items available at any one time.</inlineHelpText>
    <label>Track Inventory</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>