force-app/main/default/objects/Item__c/fields/UnitPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitPrice__c</fullName>
    <description>The unit price exclusive of discount, service charges and taxes.</description>
    <inlineHelpText>The unit price exclusive of discount, service charges and taxes.</inlineHelpText>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>