force-app/main/default/objects/Item__c/recordTypes/Corporate_Detailed_Menu.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Detailed_Menu</fullName>
    <active>true</active>
    <description>A menu where detail is provided by adding child Items or ChoiceGroups to the menu.</description>
    <label>Corporate Detailed Menu</label>
</RecordType>