force-app/main/default/objects/Item__c/recordTypes/Corporate_Item.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Item</fullName>
    <active>true</active>
    <description>Items are sold individually and are used to build detailed menus.</description>
    <label>Corporate Item</label>
</RecordType>