force-app/main/default/objects/Item__c/recordTypes/Corporate_Simple_Menu.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Simple_Menu</fullName>
    <active>true</active>
    <description>A menu where the menu detail is provided in the rich text description.  Does not contain child items.</description>
    <label>Corporate Simple Menu</label>
</RecordType>