force-app/main/default/objects/Item__c/recordTypes/Corporate_Text.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Text</fullName>
    <active>true</active>
    <description>Text items are used to create notes and instructions on BEOs.</description>
    <label>Corporate Text</label>
</RecordType>