force-app/main/default/objects/Item__c/recordTypes/Property_Item.recordType-meta.xml
<RecordType>
    <fullName>Property_Item</fullName>
    <active>true</active>
    <description>Items are sold individually and are used to build detailed menus.</description>
    <label>Property Item</label>
</RecordType>