force-app/main/default/objects/Item__c/recordTypes/Property_Text.recordType-meta.xml
<RecordType>
    <fullName>Property_Text</fullName>
    <active>true</active>
    <description>Text items are used to create notes and instructions on BEOs.</description>
    <label>Property Text</label>
</RecordType>