force-app/main/default/objects/Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ItemCategory__c</columns>
    <columns>ItemType__c</columns>
    <columns>UnitPrice__c</columns>
    <columns>IsActive__c</columns>
    <columns>Property__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Items</label>
</ListView>